--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,8 +1,9 @@
 header{
+    background-color: #1a1c1f;
     height: 70px;
-    width: 100%;
-    background-color: rgb(242, 255, 196);
-
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
 }
 .d-flex{
     display: flex;
