--- a/src/components/Title/Title.css
+++ b/src/components/Title/Title.css
@@ -2,6 +2,6 @@ hr{
     width: 5%;
     height: 3px;
     border-radius: 2px;
-    margin: 8px auto;
+    margin:0px auto 20px auto;
     background-color: rgb(177, 211, 54); 
 }
