--- a/src/components/HorizontalSection/HorizontalSection.css
+++ b/src/components/HorizontalSection/HorizontalSection.css
@@ -1,3 +1,12 @@
+.title{
+    margin: 80px auto 0px ;
+    width: 80%;
+
+}
+h2{
+    padding: 20px;
+    text-align: center;
+}
 hr{
     width: 5%;
     height: 3px;
