--- a/src/index.css
+++ b/src/index.css
@@ -1,21 +1,21 @@
 *{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 body {
   background-color: #1a1c1f;
   color: #fff;
-  font-family: "Merriweather Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial;
-  line-height: 1.6;
-}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-size: 1rem;
+  font-family: "Merriweather Sans", "Segoe UI", "Helvetica Neue", Arial;
+  line-height: 1.5;
+  font-weight: 400;
 }
 h6, h5, h4, h3, h2, h1 {
   margin-top: 0;
   margin-bottom: 0.5rem;
-  font-family: "Merriweather Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Merriweather Sans", "Segoe UI", "Helvetica Neue", Arial;
+  font-size: 1.5rem;
   font-weight: 500;
-  line-height: 1.2;
+  line-height: 1.6;
 }
