--- a/src/App.module.css
+++ b/src/App.module.css
@@ -9,6 +9,7 @@
     text-align: center;
     width: 66.66666667%;
     color: #1a1c1f;
+    margin: 30px 0;
 }
 .skillsSection{
     background-color: #fff;
