--- a/src/components/HorizontalSection/HorizontalSection.css
+++ b/src/components/HorizontalSection/HorizontalSection.css
@@ -1,7 +1,8 @@
 .container{
     min-height: 500px;
+    padding: 8rem 0;
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
 }
