--- a/src/components/SectionButton/SectionButton.css
+++ b/src/components/SectionButton/SectionButton.css
@@ -2,11 +2,15 @@
     color: #000;
     background-color: #f8f9fa;
     font-size: 0.85rem;
-    font-weight: 500;
+    font-weight: 600;
     text-transform: uppercase;
     text-decoration: none;
     padding: 1rem 2rem;
     border: none;
     border-radius: 10rem;
     margin: 50px 0;
+    cursor: pointer;
+}
+.sectionButton:hover{
+    color: salmon;
 }
