--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -7,6 +7,6 @@ header{
 }
 .d-flex{
     display: flex;
-    justify-content: space-around;
+    justify-content:space-between;
     align-items: center;
 }
