--- a/src/components/HorizontalSection/HorizontalSection.css
+++ b/src/components/HorizontalSection/HorizontalSection.css
@@ -15,6 +15,6 @@ hr.divider {
     height: 0.2rem;
     max-width: 3.25rem;
     margin: 1.5rem auto;
-    background-color: #1a1c1f;
+    background-color: #f4623a;
     border: 0;
 }
