--- a/src/components/ProjectCard/ProjectCard.css
+++ b/src/components/ProjectCard/ProjectCard.css
@@ -1,22 +1,20 @@
 .project-container{
     width: 500px;
-    height: 340px;
+    min-height: 340px;
     margin: 10px;
     padding: 5px;
     border-radius: 10px;
     border: 1px solid rgb(215, 210, 210);
     box-shadow: 0 0.5rem 1rem rgb(0 0 0 / 15%);
-    
+    text-align: center;
+    cursor: pointer;
 }
 
 .image{
     width: 480px;
-    height: 310px;
+    height: 330px;
     margin: 10px auto;
     border-radius: 10px;
-    opacity: 1;
-    transition: .5s ease;
-    backface-visibility: hidden;
 }
 
 
