aggiunta sezione Cotatti e Footer

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,7 +7,7 @@
     color: #1a1c1f;
     margin: 30px 0;
 }
-.skillsSection{
+.whiteHorizontalSection{
     background-color: #fff;
     color:#1a1c1f;
 }
